--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=m, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Git Practise Page</title>
 </head>
 <body>
+    <p>Learning on how to use Git!</p>
     
 </body>
 </html>
